# Web_hw_8

./: README.md  customlogger.py  main.py  pyproject.toml
config/: models.py
second_task/: consumer_email.py  consumer_sms.py  producer.py
seeds/: seed_01.py
