[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = "mongo_db"
authors = ["Vlad <vlad111121562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.2"
mongoengine = "^0.27.0"
tabulate = "^0.9.0"
pika = "^1.3.2"
faker = "^23.3.0"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
